@@ -93,7 +93,7 @@ $csrf = $User->Crypto->csrf_cookie ("create", "mail");
 	<tr>
 		<td><?php print _('Username'); ?></th>
 		<td>
-			<input type="text" name="muser" class='smtp form-control input-sm' value="<?php print $mail_settings->muser; ?>">
+			<input type="text" name="muser" maxlength="254" class='smtp form-control input-sm' value="<?php print $mail_settings->muser; ?>">
 		</td>
 		<td class="info2"><?php print _('Set username for SMTP authentication'); ?></td>
 	</tr>
@@ -102,7 +102,7 @@ $csrf = $User->Crypto->csrf_cookie ("create", "mail");
 	<tr>
 		<td><?php print _('Password'); ?></th>
 		<td>
-			<input type="password" name="mpass" class='smtp form-control input-sm' value="<?php print $mail_settings->mpass; ?>">
+			<input type="password" name="mpass" maxlength="128" class='smtp form-control input-sm' value="<?php print $mail_settings->mpass; ?>">
 		</td>
 		<td class="info2"><?php print _('Set password for SMTP authentication'); ?></td>
 	</tr>
